# 2020sHumorBot

./: .gitignore  LICENSE  README.md  build.bat  clean.bat  requirements.txt  run.bat  run_curation.bat  run_tests.py  run_tests_coverage.bat  setup.cfg  setup.py  upload_pip.bat  upload_test_pip.bat
PexelsDownloader/: README.md  build.bat  clean.bat  requirements.txt  run.bat  run_tests.py  run_tests_coverage.bat  setup.cfg
PexelsDownloader/PexelsDownloader/: PexelsDownloader.py  __init__.py  __main__.py
TwentyTwentiesHumorBot/: Distorter.py  FileHandler.py  ImageCaptioner.py  ImageTweeter.py  NameStupifier.py  ObjectDetector.py  TwentyTwentiesHumorBot.py  __init__.py  __main__.py
tests/: testDistorter.py  testFileHandler.py  testImageCaptioner.py  testImageTweeter.py  testNameStupifier.py  testObjectDetector.py  testTwentyTwentiesHumorBot.py
