[metadata]
name = TwentyTwentiesHumorBot
description = TwentyTwentiesHumorBot is a bot which takes images, makes them stupid, and then posts them to twitter.
author = Daniel Westbrook
author_email = dan@pixelatedawesome.com
url = http://projects.pixelatedawesome.com/2020sHumorBot/
version = attr: TwentyTwentiesHumorBot.__version__
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
keywords = bot, async, asyncio, plugins, scheduler, extensible
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
	Intended Audience :: Information Technology
	Intended Audience :: System Administrators
	Intended Audience :: Developers
	Operating System :: OS Independent
	Environment :: Plugins
	Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3

[options]
packages = TwentyTwentiesHumorBot
install_requires =
	# EasyTweeter added tweetImage in 0.10
	EasyTweeter>='0.10.0'
	imageai
	pillow
	numpy
	opencv-python

[options.entry_points]
console_scripts =
    TwentyTwentiesHumorBot = TwentyTwentiesHumorBot.__main__:main
gui_scripts =
    TwentyTwentiesHumorBot_headless = TwentyTwentiesHumorBot.__main__:main