[metadata]
name = TwentyTwentiesHumorBot
description = TwentyTwentiesHumorBot is a bot which takes images, makes them stupid with the power of AI, and then posts them to twitter.
author = Daniel Westbrook
author_email = dan@pixelatedawesome.com
url = http://www.pixelatedawesome.com/projects/2020sHumorBot/
version = attr: TwentyTwentiesHumorBot.__version__
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
keywords = bot, AI, bulge, distorted, twitter, image, distortion, meme, memes, funny, humor, fun
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
	Intended Audience :: Information Technology
	Intended Audience :: System Administrators
	Intended Audience :: Developers
	Operating System :: OS Independent
	Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
	Topic :: Scientific/Engineering :: Artificial Intelligence
	Topic :: Scientific/Engineering :: Image Recognition

[options]
packages = TwentyTwentiesHumorBot
install_requires =
	# EasyTweeter added tweetMedia in 0.10
	EasyTweeter>='0.10.0'
	imageai
	pillow
	numpy
	opencv-python
	# imageai does not include tensorflow in it's dependencies list, but it does require it. We'll include it for them.
	tensorflow

[options.entry_points]
console_scripts =
    TwentyTwentiesHumorBot = TwentyTwentiesHumorBot.__main__:main
    TwentyTwentiesHumorBotCuration = TwentyTwentiesHumorBot.__main__:curation
gui_scripts =
    TwentyTwentiesHumorBot_headless = TwentyTwentiesHumorBot.__main__:main
    TwentyTwentiesHumorBotCuration_headless = TwentyTwentiesHumorBot.__main__:curation