[metadata]
name = PexelsDownloader
description = PexelsDownloader is a support program to regularly download images that can be used as input images to the bot.
author = Daniel Westbrook
author_email = dan@pixelatedawesome.com
url = http://projects.pixelatedawesome.com/2020sHumorBot/
version = attr: PexelsDownloader.__version__
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
keywords = downloader, pexels, stock, images
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3

[options]
packages = PexelsDownloader
install_requires =
	pexels-api
	requests

[options.entry_points]
console_scripts =
    PexelsDownloader = PexelsDownloader.__main__:main
gui_scripts =
    PexelsDownloader_headless = PexelsDownloader.__main__:main